--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Exo+2:wght@400;600;700&family=Poppins:wght@500&family=Ysabeau+Office:wght@600&display=swap");
